<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bobik_interfaces</name>
  <version>0.1.0</version>
  <description>Contains message and service definitions used by bobik_robot.</description>

  <maintainer email="slesinger@gmail.com">Honza Slesinger</maintainer>

  <license>Apache License 2.0</license>

  <author email="slesinger@gmail.com">Honza Slesinger</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
